Switch to jspecify for nullability annotations.